<resources>
    <string name="app_name">Montain Wolves</string>
    <string name="in_out_layout">Inputs / Outputs</string>
    <string name="game_data_layout">Data Game</string>
    <string name="switch_gps_off">GPS OFF</string>
    <string name="switch_gps_on">GPS ON</string>
    <string name="switch_leds_off">Leds OFF</string>
    <string name="switch_leds_on">Leds ON</string>
    <string name="switch_sound_off">Sound OFF</string>
    <string name="switch_sound_on">Sound ON</string>
    <string name="switch_smoke_off">Smoke OFF</string>
    <string name="switch_smoke_on">Smoke ON</string>
    <string name="time_of_game">Time</string>
    <string name="num_of_players">Players</string>
    <string name="bomb_code">Bomb Code</string>
    <string name="game_time">Game Time</string>
    <string name="send_coordinate">Coordinate</string>
    <string name="send_config">Done</string>
</resources>

