<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/teamLogo"
        android:layout_width="211dp"
        android:layout_height="258dp"
        android:background="@drawable/montain_wolves_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <ImageButton
        android:id="@+id/play_pause_intro"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pause" />


    <TextView
        android:id="@+id/editText_inOut"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="68dp"
        android:layout_marginTop="15dp"
        android:text="@string/in_out_layout"
        android:textColor="@color/green"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sw_gps"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:text="@string/switch_gps_off"
        android:textColor="@color/blue"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sw_sound"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:background="@color/white"
        android:text="@string/switch_sound_off"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/sw_gps"
        app:layout_constraintStart_toEndOf="@+id/sw_gps"
        app:layout_constraintTop_toTopOf="@+id/sw_gps"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/sw_leds"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/switch_leds_off"
        android:background="@color/white"
        android:textSize="25dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sw_gps"
        app:layout_constraintStart_toStartOf="@+id/sw_gps"
        app:layout_constraintTop_toBottomOf="@+id/sw_gps" />

    <Switch
        android:id="@+id/sw_smoke"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/blue"
        android:background="@color/white"
        android:text="@string/switch_smoke_off"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sw_sound"
        app:layout_constraintStart_toStartOf="@+id/sw_sound"
        app:layout_constraintTop_toBottomOf="@+id/sw_sound" />

    <EditText
        android:id="@+id/edit_text_time_game"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/time_of_game"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_leds" />

    <EditText
        android:id="@+id/edit_text_players"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/num_of_players"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_time_game" />

    <EditText
        android:id="@+id/edit_text_bomb_Code"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/bomb_code"
        android:textSize="30dp"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_players" />

    <EditText
        android:id="@+id/edit_text_game_time"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/game_time"
        android:textSize="30dp"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_bomb_Code" />

    <Button
        android:id="@+id/btn_send_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="24dp"
        android:background="@color/green"
        android:text="@string/send_coordinate"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edit_text_players"
        app:layout_constraintTop_toBottomOf="@+id/sw_smoke" />

    <Button
        android:id="@+id/btn_send_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="76dp"
        android:background="@color/red"
        android:text="@string/send_config"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edit_text_players"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_coordinates" />


</androidx.constraintlayout.widget.ConstraintLayout>